--- a/voxplace-server/Cargo.toml
+++ b/voxplace-server/Cargo.toml
@@ -10,6 +10,7 @@ actix = "0.13.0"
 actix-cors = "0.6.4"
 actix-web = "4.3.1"
 actix-web-actors = "4.2.0"
+flate2 = "1.0.26"
 rand = "0.8.5"
 rusqlite = "0.29.0"
 serde = "1.0.171"
