--- a/voxplace-server/Cargo.toml
+++ b/voxplace-server/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 [dependencies]
 actix = "0.13.0"
 actix-cors = "0.6.4"
+actix-rt = "2.8.0"
 actix-web = "4.3.1"
 actix-web-actors = "4.2.0"
+crossbeam = "0.8.2"
 flate2 = "1.0.26"
 rand = "0.8.5"
 rusqlite = "0.29.0"
