rewrite with nuxt3 + total refactoring

--- a/voxplace-server/Cargo.toml
+++ b/voxplace-server/Cargo.toml
@@ -11,10 +11,15 @@ actix-cors = "0.6.4"
 actix-rt = "2.8.0"
 actix-web = "4.3.1"
 actix-web-actors = "4.2.0"
+bcrypt = "0.15.0"
+byteorder = "1.4.3"
+chrono = "0.4.26"
 crossbeam = "0.8.2"
 flate2 = "1.0.26"
+jsonwebtoken = "8.3.0"
 rand = "0.8.5"
 rusqlite = "0.29.0"
 serde = "1.0.171"
 serde_derive = "1.0.171"
 serde_json = "1.0.100"
+tokio = "1.29.1"
