--- a/voxplace-server/Cargo.toml
+++ b/voxplace-server/Cargo.toml
@@ -6,21 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix = "0.13.0"
-actix-cors = "0.6.4"
-actix-rt = "2.8.0"
-actix-web = "4.3.1"
-actix-web-actors = "4.2.0"
-bcrypt = "0.15.0"
-byteorder = "1.4.3"
-chrono = "0.4.26"
-crossbeam = "0.8.2"
-flate2 = "1.0.26"
-jsonwebtoken = "8.3.0"
+actix = "0.13.5"
+actix-cors = "0.7.0"
+actix-rt = "2.10.0"
+actix-web = "4.9.0"
+actix-ws = "0.3.0"
+bcrypt = "0.15.1"
+byteorder = "1.5.0"
+chrono = "0.4.38"
+crossbeam = "0.8.4"
+flate2 = "1.0.33"
+futures-util = "0.3.30"
+jsonwebtoken = "9.3.0"
 rand = "0.8.5"
-rusqlite = "0.29.0"
-serde = "1.0.171"
-serde_derive = "1.0.171"
-serde_json = "1.0.100"
-thiserror = "1.0.44"
-tokio = "1.29.1"
+rusqlite = "0.32.1"
+serde = "1.0.210"
+serde_derive = "1.0.210"
+serde_json = "1.0.128"
+thiserror = "1.0.63"
+tokio = "1.40.0"
